replaced accidentally deleted cell calling the final conversion function

--- a/create_and_convert_stac_catalogue.ipynb
+++ b/create_and_convert_stac_catalogue.ipynb
@@ -545,6 +545,16 @@
    },
    "outputs": [],
    "source": [
+    "output_file = \"/dbfs/FileStore/tomkdefra/test_stac_geoparquet.parquet\"\n",
+    "convert_stac_to_geoparquet(catalog, output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dbutils.fs.mv(\"FileStore/tomkdefra/test_stac_geoparquet.parquet\", \"mnt/lab/unrestricted/eods_stac/eods_s2.parquet\", True)"
    ]
   }
